--- a/building_pipeline_for_hacker_news_search_API.ipynb
+++ b/building_pipeline_for_hacker_news_search_API.ipynb
@@ -429,85 +429,48 @@
      "output_type": "stream",
      "text": [
       "Graph: \n",
-      "('{<function first at 0x110650488>: [<function second at 0x1106500d0>], '\n",
-      " '<function second at 0x1106500d0>: [<function third at 0x110650048>, '\n",
-      " '<function fourth at 0x110650510>], <function third at 0x110650048>: '\n",
-      " '[<function fourth at 0x110650510>], <function fourth at 0x110650510>: '\n",
-      " '[<function fifth at 0x120808f28>], <function fifth at 0x120808f28>: []}')\n",
+      "('{<function first at 0x1026f7510>: [<function second at 0x1026f7598>], '\n",
+      " '<function second at 0x1026f7598>: [<function third at 0x1026f7620>, '\n",
+      " '<function fourth at 0x1026f76a8>], <function third at 0x1026f7620>: '\n",
+      " '[<function fourth at 0x1026f76a8>], <function fourth at 0x1026f76a8>: '\n",
+      " '[<function fifth at 0x11298d1e0>], <function fifth at 0x11298d1e0>: []}')\n",
       "\n",
       "\n",
       "Parent Function: \n",
-      "('{<function first at 0x110650488>: [], <function second at 0x1106500d0>: '\n",
-      " '[<function first at 0x110650488>], <function third at 0x110650048>: '\n",
-      " '[<function second at 0x1106500d0>], <function fourth at 0x110650510>: '\n",
-      " '[<function second at 0x1106500d0>, <function third at 0x110650048>], '\n",
-      " '<function fifth at 0x120808f28>: [<function fourth at 0x110650510>]}')\n",
+      "('{<function first at 0x1026f7510>: [], <function second at 0x1026f7598>: '\n",
+      " '[<function first at 0x1026f7510>], <function third at 0x1026f7620>: '\n",
+      " '[<function second at 0x1026f7598>], <function fourth at 0x1026f76a8>: '\n",
+      " '[<function second at 0x1026f7598>, <function third at 0x1026f7620>], '\n",
+      " '<function fifth at 0x11298d1e0>: [<function fourth at 0x1026f76a8>]}')\n",
       "\n",
       "\n",
       "InDegree Count: \n",
-      "('{<function first at 0x110650488>: 0, <function second at 0x1106500d0>: 1, '\n",
-      " '<function third at 0x110650048>: 1, <function fourth at 0x110650510>: 2, '\n",
-      " '<function fifth at 0x120808f28>: 1}')\n",
+      "('{<function first at 0x1026f7510>: 0, <function second at 0x1026f7598>: 1, '\n",
+      " '<function third at 0x1026f7620>: 1, <function fourth at 0x1026f76a8>: 2, '\n",
+      " '<function fifth at 0x11298d1e0>: 1}')\n",
       "\n",
       "\n",
       "Function Running Order: \n",
-      "('[<function first at 0x110650488>, <function second at 0x1106500d0>, '\n",
-      " '<function third at 0x110650048>, <function fourth at 0x110650510>, <function '\n",
-      " 'fifth at 0x120808f28>]')\n",
+      "('[<function first at 0x1026f7510>, <function second at 0x1026f7598>, '\n",
+      " '<function third at 0x1026f7620>, <function fourth at 0x1026f76a8>, <function '\n",
+      " 'fifth at 0x11298d1e0>]')\n",
       "\n",
       "\n",
       "Keyword arguments: \n",
-      "\"{<function third at 0x110650048>: {'y': 4, 'z': 4}}\"\n",
+      "\"{<function third at 0x1026f7620>: {'y': 4, 'z': 4}}\"\n",
       "\n",
       "\n",
       "N Outputs: \n",
-      "('{<function first at 0x110650488>: 1, <function second at 0x1106500d0>: 1, '\n",
-      " '<function third at 0x110650048>: 1, <function fourth at 0x110650510>: 1, '\n",
-      " '<function fifth at 0x120808f28>: 1}')\n",
+      "('{<function first at 0x1026f7510>: 1, <function second at 0x1026f7598>: 1, '\n",
+      " '<function third at 0x1026f7620>: 1, <function fourth at 0x1026f76a8>: 1, '\n",
+      " '<function fifth at 0x11298d1e0>: 1}')\n",
       "\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Graph': {<function __main__.first()>: [<function __main__.second(x)>],\n",
-       "  <function __main__.second(x)>: [<function __main__.third(x, y, z)>,\n",
-       "   <function __main__.fourth(x, y)>],\n",
-       "  <function __main__.third(x, y, z)>: [<function __main__.fourth(x, y)>],\n",
-       "  <function __main__.fourth(x, y)>: [<function __main__.fifth(x)>],\n",
-       "  <function __main__.fifth(x)>: []},\n",
-       " 'Parent Function': {<function __main__.first()>: [],\n",
-       "  <function __main__.second(x)>: [<function __main__.first()>],\n",
-       "  <function __main__.third(x, y, z)>: [<function __main__.second(x)>],\n",
-       "  <function __main__.fourth(x, y)>: [<function __main__.second(x)>,\n",
-       "   <function __main__.third(x, y, z)>],\n",
-       "  <function __main__.fifth(x)>: [<function __main__.fourth(x, y)>]},\n",
-       " 'InDegree Count': {<function __main__.first()>: 0,\n",
-       "  <function __main__.second(x)>: 1,\n",
-       "  <function __main__.third(x, y, z)>: 1,\n",
-       "  <function __main__.fourth(x, y)>: 2,\n",
-       "  <function __main__.fifth(x)>: 1},\n",
-       " 'Function Running Order': [<function __main__.first()>,\n",
-       "  <function __main__.second(x)>,\n",
-       "  <function __main__.third(x, y, z)>,\n",
-       "  <function __main__.fourth(x, y)>,\n",
-       "  <function __main__.fifth(x)>],\n",
-       " 'Keyword arguments': {<function __main__.third(x, y, z)>: {'y': 4, 'z': 4}},\n",
-       " 'N Outputs': {<function __main__.first()>: 1,\n",
-       "  <function __main__.second(x)>: 1,\n",
-       "  <function __main__.third(x, y, z)>: 1,\n",
-       "  <function __main__.fourth(x, y)>: 1,\n",
-       "  <function __main__.fifth(x)>: 1}}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_internal_graph(pipeline)"
+    "internal_graph = check_internal_graph(pipeline)"
    ]
   },
   {
@@ -642,85 +605,48 @@
      "output_type": "stream",
      "text": [
       "Graph: \n",
-      "('{<function first at 0x110650488>: [<function second at 0x1106500d0>], '\n",
-      " '<function second at 0x1106500d0>: [<function third at 0x110650048>, '\n",
-      " '<function fourth at 0x110650510>], <function third at 0x110650048>: '\n",
-      " '[<function fourth at 0x110650510>], <function fourth at 0x110650510>: '\n",
-      " '[<function fifth at 0x120808f28>], <function fifth at 0x120808f28>: []}')\n",
+      "('{<function first at 0x1026f7510>: [<function second at 0x1026f7598>], '\n",
+      " '<function second at 0x1026f7598>: [<function third at 0x1026f7620>, '\n",
+      " '<function fourth at 0x1026f76a8>], <function third at 0x1026f7620>: '\n",
+      " '[<function fourth at 0x1026f76a8>], <function fourth at 0x1026f76a8>: '\n",
+      " '[<function fifth at 0x11298d1e0>], <function fifth at 0x11298d1e0>: []}')\n",
       "\n",
       "\n",
       "Parent Function: \n",
-      "('{<function first at 0x110650488>: [], <function second at 0x1106500d0>: '\n",
-      " '[<function first at 0x110650488>], <function third at 0x110650048>: '\n",
-      " '[<function second at 0x1106500d0>], <function fourth at 0x110650510>: '\n",
-      " '[<function second at 0x1106500d0>, <function third at 0x110650048>], '\n",
-      " '<function fifth at 0x120808f28>: [<function fourth at 0x110650510>]}')\n",
+      "('{<function first at 0x1026f7510>: [], <function second at 0x1026f7598>: '\n",
+      " '[<function first at 0x1026f7510>], <function third at 0x1026f7620>: '\n",
+      " '[<function second at 0x1026f7598>], <function fourth at 0x1026f76a8>: '\n",
+      " '[<function second at 0x1026f7598>, <function third at 0x1026f7620>], '\n",
+      " '<function fifth at 0x11298d1e0>: [<function fourth at 0x1026f76a8>]}')\n",
       "\n",
       "\n",
       "InDegree Count: \n",
-      "('{<function first at 0x110650488>: 0, <function second at 0x1106500d0>: 1, '\n",
-      " '<function third at 0x110650048>: 1, <function fourth at 0x110650510>: 2, '\n",
-      " '<function fifth at 0x120808f28>: 1}')\n",
+      "('{<function first at 0x1026f7510>: 0, <function second at 0x1026f7598>: 1, '\n",
+      " '<function third at 0x1026f7620>: 1, <function fourth at 0x1026f76a8>: 2, '\n",
+      " '<function fifth at 0x11298d1e0>: 1}')\n",
       "\n",
       "\n",
       "Function Running Order: \n",
-      "('[<function first at 0x110650488>, <function second at 0x1106500d0>, '\n",
-      " '<function third at 0x110650048>, <function fourth at 0x110650510>, <function '\n",
-      " 'fifth at 0x120808f28>]')\n",
+      "('[<function first at 0x1026f7510>, <function second at 0x1026f7598>, '\n",
+      " '<function third at 0x1026f7620>, <function fourth at 0x1026f76a8>, <function '\n",
+      " 'fifth at 0x11298d1e0>]')\n",
       "\n",
       "\n",
       "Keyword arguments: \n",
-      "\"{<function third at 0x110650048>: {'y': 4, 'z': 4}}\"\n",
+      "\"{<function third at 0x1026f7620>: {'y': 4, 'z': 4}}\"\n",
       "\n",
       "\n",
       "N Outputs: \n",
-      "('{<function first at 0x110650488>: 1, <function second at 0x1106500d0>: 1, '\n",
-      " '<function third at 0x110650048>: 1, <function fourth at 0x110650510>: 1, '\n",
-      " '<function fifth at 0x120808f28>: 1}')\n",
+      "('{<function first at 0x1026f7510>: 1, <function second at 0x1026f7598>: 1, '\n",
+      " '<function third at 0x1026f7620>: 1, <function fourth at 0x1026f76a8>: 1, '\n",
+      " '<function fifth at 0x11298d1e0>: 1}')\n",
       "\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'Graph': {<function __main__.first()>: [<function __main__.second(x)>],\n",
-       "  <function __main__.second(x)>: [<function __main__.third(x, y, z)>,\n",
-       "   <function __main__.fourth(x, y)>],\n",
-       "  <function __main__.third(x, y, z)>: [<function __main__.fourth(x, y)>],\n",
-       "  <function __main__.fourth(x, y)>: [<function __main__.fifth(x)>],\n",
-       "  <function __main__.fifth(x)>: []},\n",
-       " 'Parent Function': {<function __main__.first()>: [],\n",
-       "  <function __main__.second(x)>: [<function __main__.first()>],\n",
-       "  <function __main__.third(x, y, z)>: [<function __main__.second(x)>],\n",
-       "  <function __main__.fourth(x, y)>: [<function __main__.second(x)>,\n",
-       "   <function __main__.third(x, y, z)>],\n",
-       "  <function __main__.fifth(x)>: [<function __main__.fourth(x, y)>]},\n",
-       " 'InDegree Count': {<function __main__.first()>: 0,\n",
-       "  <function __main__.second(x)>: 1,\n",
-       "  <function __main__.third(x, y, z)>: 1,\n",
-       "  <function __main__.fourth(x, y)>: 2,\n",
-       "  <function __main__.fifth(x)>: 1},\n",
-       " 'Function Running Order': [<function __main__.first()>,\n",
-       "  <function __main__.second(x)>,\n",
-       "  <function __main__.third(x, y, z)>,\n",
-       "  <function __main__.fourth(x, y)>,\n",
-       "  <function __main__.fifth(x)>],\n",
-       " 'Keyword arguments': {<function __main__.third(x, y, z)>: {'y': 4, 'z': 4}},\n",
-       " 'N Outputs': {<function __main__.first()>: 1,\n",
-       "  <function __main__.second(x)>: 1,\n",
-       "  <function __main__.third(x, y, z)>: 1,\n",
-       "  <function __main__.fourth(x, y)>: 1,\n",
-       "  <function __main__.fifth(x)>: 1}}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_internal_graph(pipeline)"
+    "internal_graph = check_internal_graph(pipeline)"
    ]
   },
   {
@@ -1980,17 +1906,17 @@
     {
      "data": {
       "text/plain": [
-       "Unix: A History and a Memoir, by Brian Kernighan                            0.2\n",
-       "Former Twitter Employees Charged with Spying for Saudi Arabia               0.2\n",
-       "Offline-Pedia converts old televisions into Wikipedia readers (2018)        0.1\n",
-       "Google Buys Fitbit for $2.1B                                                0.1\n",
-       "Why Graphiti?                                                               0.1\n",
-       "                                                                           ... \n",
-       "XML is almost always misused                                                0.1\n",
-       "Surviving Software Dependencies                                             0.1\n",
-       "Block on GM rice ‘has cost millions of lives and led to child blindness’    0.1\n",
-       "Thriving on the Technical Leadership Path                                   0.1\n",
-       "Evaluating Bazel for building Firefox                                       0.1\n",
+       "Unix: A History and a Memoir, by Brian Kernighan                                    0.2\n",
+       "Former Twitter Employees Charged with Spying for Saudi Arabia                       0.2\n",
+       "After Spike in Deaths, New York to Get 250 Miles of Protected Bike Lanes            0.1\n",
+       "Ring used video captured on Halloween for PR                                        0.1\n",
+       "The US nuclear forces’ messaging system finally got rid of its floppy disks         0.1\n",
+       "                                                                                   ... \n",
+       "An Introduction to Real-Time Subsurface Scattering                                  0.1\n",
+       "Dissent at Facebook over hands-off stance on political ads                          0.1\n",
+       "Tech giants have hijacked the web – Some innovators are developing new platforms    0.1\n",
+       "Illumos is a Unix operating system which provides next-generation features          0.1\n",
+       "Vaping Illnesses Are Linked to Vitamin E Acetate, CDC Says                          0.1\n",
        "Name: title, Length: 998, dtype: float64"
       ]
      },
@@ -3535,7 +3461,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys([<function dataset_detail at 0x1a2306b7b8>, <function transform_dtypes at 0x10fb521e0>, <function dataset_summary at 0x10fa78598>, <function extract_data at 0x1a23fb89d8>, <function create_new_data_with_regex at 0x1a2427b488>, <function null_rows at 0x1a2429f0d0>, <function fill_na at 0x1a2429f8c8>])"
+       "dict_keys([<function dataset_detail at 0x1a151cab70>, <function transform_dtypes at 0x1026f7400>, <function dataset_summary at 0x1a151ca488>, <function extract_data at 0x1a1612b8c8>, <function create_new_data_with_regex at 0x1a1612be18>, <function null_rows at 0x1a163eea60>, <function fill_na at 0x1a1640c378>])"
       ]
      },
      "execution_count": 41,
