--- a/building_pipeline_for_hacker_news_search_API.ipynb
+++ b/building_pipeline_for_hacker_news_search_API.ipynb
@@ -237,11 +237,8 @@
     "        \n",
     "        # Identify the starting function. \n",
     "        if start_func is not None:\n",
-    "            for i, task in enumerate(tasks_order): \n",
-    "                if task == start_func: \n",
-    "                    idx = i\n",
-    "                    id_func = idx\n",
-    "                    break\n",
+    "            idx = tasks_order.index(start_func)\n",
+    "            id_func = idx\n",
     "        \n",
     "        # Run the function(s).\n",
     "        for i, task in enumerate(tasks_order[idx:]):\n",
@@ -520,48 +517,48 @@
      "output_type": "stream",
      "text": [
       "Graph: \n",
-      "('{<function first at 0x10e433730>: [<function second at 0x10e433378>], '\n",
-      " '<function second at 0x10e433378>: [<function third at 0x10e4337b8>, '\n",
-      " '<function fourth at 0x10e433488>], <function third at 0x10e4337b8>: '\n",
-      " '[<function fourth at 0x10e433488>], <function fourth at 0x10e433488>: '\n",
-      " '[<function fifth at 0x11e6ac598>], <function fifth at 0x11e6ac598>: []}')\n",
+      "('{<function first at 0x10b8c7f28>: [<function second at 0x10b8c3048>], '\n",
+      " '<function second at 0x10b8c3048>: [<function third at 0x10b8c30d0>, '\n",
+      " '<function fourth at 0x10b8c3158>], <function third at 0x10b8c30d0>: '\n",
+      " '[<function fourth at 0x10b8c3158>], <function fourth at 0x10b8c3158>: '\n",
+      " '[<function fifth at 0x11bb2ec80>], <function fifth at 0x11bb2ec80>: []}')\n",
       "\n",
       "\n",
       "Parent Function: \n",
-      "('{<function first at 0x10e433730>: [], <function second at 0x10e433378>: '\n",
-      " '[<function first at 0x10e433730>], <function third at 0x10e4337b8>: '\n",
-      " '[<function second at 0x10e433378>], <function fourth at 0x10e433488>: '\n",
-      " '[<function second at 0x10e433378>, <function third at 0x10e4337b8>], '\n",
-      " '<function fifth at 0x11e6ac598>: [<function fourth at 0x10e433488>]}')\n",
+      "('{<function first at 0x10b8c7f28>: [], <function second at 0x10b8c3048>: '\n",
+      " '[<function first at 0x10b8c7f28>], <function third at 0x10b8c30d0>: '\n",
+      " '[<function second at 0x10b8c3048>], <function fourth at 0x10b8c3158>: '\n",
+      " '[<function second at 0x10b8c3048>, <function third at 0x10b8c30d0>], '\n",
+      " '<function fifth at 0x11bb2ec80>: [<function fourth at 0x10b8c3158>]}')\n",
       "\n",
       "\n",
       "InDegree Count: \n",
-      "('{<function first at 0x10e433730>: 0, <function second at 0x10e433378>: 1, '\n",
-      " '<function third at 0x10e4337b8>: 1, <function fourth at 0x10e433488>: 2, '\n",
-      " '<function fifth at 0x11e6ac598>: 1}')\n",
+      "('{<function first at 0x10b8c7f28>: 0, <function second at 0x10b8c3048>: 1, '\n",
+      " '<function third at 0x10b8c30d0>: 1, <function fourth at 0x10b8c3158>: 2, '\n",
+      " '<function fifth at 0x11bb2ec80>: 1}')\n",
       "\n",
       "\n",
       "Function Running Order: \n",
-      "('[<function first at 0x10e433730>, <function second at 0x10e433378>, '\n",
-      " '<function third at 0x10e4337b8>, <function fourth at 0x10e433488>, <function '\n",
-      " 'fifth at 0x11e6ac598>]')\n",
+      "('[<function first at 0x10b8c7f28>, <function second at 0x10b8c3048>, '\n",
+      " '<function third at 0x10b8c30d0>, <function fourth at 0x10b8c3158>, <function '\n",
+      " 'fifth at 0x11bb2ec80>]')\n",
       "\n",
       "\n",
       "Keyword arguments: \n",
-      "\"{<function third at 0x10e4337b8>: {'y': 4, 'z': 4}}\"\n",
+      "\"{<function third at 0x10b8c30d0>: {'y': 4, 'z': 4}}\"\n",
       "\n",
       "\n",
       "N Outputs As Inputs: \n",
-      "('{<function first at 0x10e433730>: 1, <function second at 0x10e433378>: 1, '\n",
-      " '<function third at 0x10e4337b8>: 1, <function fourth at 0x10e433488>: 1, '\n",
-      " '<function fifth at 0x11e6ac598>: 2}')\n",
+      "('{<function first at 0x10b8c7f28>: 1, <function second at 0x10b8c3048>: 1, '\n",
+      " '<function third at 0x10b8c30d0>: 1, <function fourth at 0x10b8c3158>: 1, '\n",
+      " '<function fifth at 0x11bb2ec80>: 2}')\n",
       "\n",
       "\n",
       "Checkpoints: \n",
-      "('{<function first at 0x10e433730>: (True, 1), <function second at '\n",
-      " '0x10e433378>: (True, 1), <function third at 0x10e4337b8>: (True, 1), '\n",
-      " '<function fourth at 0x10e433488>: (True, 1), <function fifth at '\n",
-      " '0x11e6ac598>: (True, 1)}')\n",
+      "('{<function first at 0x10b8c7f28>: (True, 1), <function second at '\n",
+      " '0x10b8c3048>: (True, 1), <function third at 0x10b8c30d0>: (True, 1), '\n",
+      " '<function fourth at 0x10b8c3158>: (True, 1), <function fifth at '\n",
+      " '0x11bb2ec80>: (True, 1)}')\n",
       "\n",
       "\n"
      ]
@@ -707,48 +704,48 @@
      "output_type": "stream",
      "text": [
       "Graph: \n",
-      "('{<function first at 0x10e433730>: [<function second at 0x10e433378>], '\n",
-      " '<function second at 0x10e433378>: [<function third at 0x10e4337b8>, '\n",
-      " '<function fourth at 0x10e433488>], <function third at 0x10e4337b8>: '\n",
-      " '[<function fourth at 0x10e433488>], <function fourth at 0x10e433488>: '\n",
-      " '[<function fifth at 0x11e6ac598>], <function fifth at 0x11e6ac598>: []}')\n",
+      "('{<function first at 0x10b8c7f28>: [<function second at 0x10b8c3048>], '\n",
+      " '<function second at 0x10b8c3048>: [<function third at 0x10b8c30d0>, '\n",
+      " '<function fourth at 0x10b8c3158>], <function third at 0x10b8c30d0>: '\n",
+      " '[<function fourth at 0x10b8c3158>], <function fourth at 0x10b8c3158>: '\n",
+      " '[<function fifth at 0x11bb2ec80>], <function fifth at 0x11bb2ec80>: []}')\n",
       "\n",
       "\n",
       "Parent Function: \n",
-      "('{<function first at 0x10e433730>: [], <function second at 0x10e433378>: '\n",
-      " '[<function first at 0x10e433730>], <function third at 0x10e4337b8>: '\n",
-      " '[<function second at 0x10e433378>], <function fourth at 0x10e433488>: '\n",
-      " '[<function second at 0x10e433378>, <function third at 0x10e4337b8>], '\n",
-      " '<function fifth at 0x11e6ac598>: [<function fourth at 0x10e433488>]}')\n",
+      "('{<function first at 0x10b8c7f28>: [], <function second at 0x10b8c3048>: '\n",
+      " '[<function first at 0x10b8c7f28>], <function third at 0x10b8c30d0>: '\n",
+      " '[<function second at 0x10b8c3048>], <function fourth at 0x10b8c3158>: '\n",
+      " '[<function second at 0x10b8c3048>, <function third at 0x10b8c30d0>], '\n",
+      " '<function fifth at 0x11bb2ec80>: [<function fourth at 0x10b8c3158>]}')\n",
       "\n",
       "\n",
       "InDegree Count: \n",
-      "('{<function first at 0x10e433730>: 0, <function second at 0x10e433378>: 1, '\n",
-      " '<function third at 0x10e4337b8>: 1, <function fourth at 0x10e433488>: 2, '\n",
-      " '<function fifth at 0x11e6ac598>: 1}')\n",
+      "('{<function first at 0x10b8c7f28>: 0, <function second at 0x10b8c3048>: 1, '\n",
+      " '<function third at 0x10b8c30d0>: 1, <function fourth at 0x10b8c3158>: 2, '\n",
+      " '<function fifth at 0x11bb2ec80>: 1}')\n",
       "\n",
       "\n",
       "Function Running Order: \n",
-      "('[<function first at 0x10e433730>, <function second at 0x10e433378>, '\n",
-      " '<function third at 0x10e4337b8>, <function fourth at 0x10e433488>, <function '\n",
-      " 'fifth at 0x11e6ac598>]')\n",
+      "('[<function first at 0x10b8c7f28>, <function second at 0x10b8c3048>, '\n",
+      " '<function third at 0x10b8c30d0>, <function fourth at 0x10b8c3158>, <function '\n",
+      " 'fifth at 0x11bb2ec80>]')\n",
       "\n",
       "\n",
       "Keyword arguments: \n",
-      "\"{<function third at 0x10e4337b8>: {'y': 4, 'z': 4}}\"\n",
+      "\"{<function third at 0x10b8c30d0>: {'y': 4, 'z': 4}}\"\n",
       "\n",
       "\n",
       "N Outputs As Inputs: \n",
-      "('{<function first at 0x10e433730>: 1, <function second at 0x10e433378>: 1, '\n",
-      " '<function third at 0x10e4337b8>: 1, <function fourth at 0x10e433488>: 1, '\n",
-      " '<function fifth at 0x11e6ac598>: 2}')\n",
+      "('{<function first at 0x10b8c7f28>: 1, <function second at 0x10b8c3048>: 1, '\n",
+      " '<function third at 0x10b8c30d0>: 1, <function fourth at 0x10b8c3158>: 1, '\n",
+      " '<function fifth at 0x11bb2ec80>: 2}')\n",
       "\n",
       "\n",
       "Checkpoints: \n",
-      "('{<function first at 0x10e433730>: (True, 1), <function second at '\n",
-      " '0x10e433378>: (True, 1), <function third at 0x10e4337b8>: (True, 1), '\n",
-      " '<function fourth at 0x10e433488>: (True, 1), <function fifth at '\n",
-      " '0x11e6ac598>: (True, 1)}')\n",
+      "('{<function first at 0x10b8c7f28>: (True, 1), <function second at '\n",
+      " '0x10b8c3048>: (True, 1), <function third at 0x10b8c30d0>: (True, 1), '\n",
+      " '<function fourth at 0x10b8c3158>: (True, 1), <function fifth at '\n",
+      " '0x11bb2ec80>: (True, 1)}')\n",
       "\n",
       "\n"
      ]
@@ -1975,7 +1972,7 @@
        "    <tr>\n",
        "      <td>top</td>\n",
        "      <td>21436414</td>\n",
-       "      <td>Unix: A History and a Memoir, by Brian Kernighan</td>\n",
+       "      <td>Former Twitter Employees Charged with Spying for Saudi Arabia</td>\n",
        "      <td>https://www.ibm.com/blogs/research/2019/10/on-quantum-supremacy/</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1989,11 +1986,17 @@
        "</div>"
       ],
       "text/plain": [
-       "        objectID                                             title  \\\n",
-       "count       1000                                              1000   \n",
-       "unique      1000                                               998   \n",
-       "top     21436414  Unix: A History and a Memoir, by Brian Kernighan   \n",
-       "freq           1                                                 2   \n",
+       "        objectID  \\\n",
+       "count       1000   \n",
+       "unique      1000   \n",
+       "top     21436414   \n",
+       "freq           1   \n",
+       "\n",
+       "                                                                title  \\\n",
+       "count                                                            1000   \n",
+       "unique                                                            998   \n",
+       "top     Former Twitter Employees Charged with Spying for Saudi Arabia   \n",
+       "freq                                                                2   \n",
        "\n",
        "                                                                     url  \n",
        "count                                                                966  \n",
@@ -2027,17 +2030,17 @@
     {
      "data": {
       "text/plain": [
-       "Unix: A History and a Memoir, by Brian Kernighan                       0.2\n",
-       "Former Twitter Employees Charged with Spying for Saudi Arabia          0.2\n",
-       "Machine learning in UK financial services                              0.1\n",
-       "Pop_OS 19.10                                                           0.1\n",
-       "Show HN: Minimal Reader for the ESV Bible, Written in Janet            0.1\n",
-       "                                                                      ... \n",
-       "Unfork()                                                               0.1\n",
-       "Free Online Courses from Top Universities                              0.1\n",
-       "The problem with metrics is a big problem for AI                       0.1\n",
-       "Skylon’s SABRE Engine Passes a Big Test                                0.1\n",
-       "Tech Workers Backing Candidates Looking to Break Up Their Employers    0.1\n",
+       "Former Twitter Employees Charged with Spying for Saudi Arabia                      0.2\n",
+       "Unix: A History and a Memoir, by Brian Kernighan                                   0.2\n",
+       "Veterans want answers as new data shows rise in cancers over two decades of war    0.1\n",
+       "Isolation, anxiety, and depression in the remote workplace                         0.1\n",
+       "How to not rewrite it in Rust                                                      0.1\n",
+       "                                                                                  ... \n",
+       "Nuclear fusion is 'a question of when, not if'                                     0.1\n",
+       "Krispy Kreme mule will be allowed to continue operating                            0.1\n",
+       "I'm Resigning as a Stack Overflow Community Elected Moderator                      0.1\n",
+       "SiFive Announces First RISC-V OoO CPU Core                                         0.1\n",
+       "Show HN: Python package and CLI to generate stylistic word clouds                  0.1\n",
        "Name: title, Length: 998, dtype: float64"
       ]
      },
@@ -3642,7 +3645,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys([<function dataset_detail at 0x1a20ef7510>, <function transform_dtypes at 0x11e6c3a60>, <function dataset_summary at 0x11e6acc80>, <function dist_plot at 0x10e3f2598>, <function regex_extract at 0x10d9f92f0>, <function regex_extract at 0x10d9f9730>, <function null_rows at 0x10d9f9b70>, <function fill_na at 0x1a21ea8488>])"
+       "dict_keys([<function dataset_detail at 0x1a1e382158>, <function transform_dtypes at 0x11bb3b048>, <function dataset_summary at 0x10ae64a60>, <function dist_plot at 0x10b87b158>, <function regex_extract at 0x1a1ec80730>, <function regex_extract at 0x1a1ec80c80>, <function null_rows at 0x10ad8c488>, <function fill_na at 0x10ad8cc80>])"
       ]
      },
      "execution_count": 45,
