--- a/building_pipeline_for_hacker_news_search_API.ipynb
+++ b/building_pipeline_for_hacker_news_search_API.ipynb
@@ -105,6 +105,7 @@
     "        # Map each function to a boolean, whether to save as checkpoint or not.  \n",
     "        self.checkpoints = {}\n",
     "        \n",
+    "        \n",
     "    # Add a link between the parent function to the child functions.\n",
     "    # Store the parent function as the key and the 'to' function (child) as value in a dict.\n",
     "    def add(self, parent_func, to=None, n_out_as_in=1, checkpoint=False, output_to_save=1):\n",
@@ -130,6 +131,7 @@
     "        if len(self.sort()) != len(self.graph):\n",
     "            raise Exception(\"Graph structure must not be cyclical, please correct it.\")\n",
     "    \n",
+    "    \n",
     "    # Count the in-degree of each function.\n",
     "    def in_degree_count(self):\n",
     "        in_degree_count = {}\n",
@@ -141,6 +143,7 @@
     "        # because the original 'in_degree_count' will be removed after applying 'sort()' method.\n",
     "        self.inDegree_count = in_degree_count.copy()\n",
     "        return in_degree_count\n",
+    "    \n",
     "    \n",
     "    # Sort the function based on the 'in_degree' counts in ascending order.\n",
     "    def sort(self):\n",
@@ -191,6 +194,7 @@
     "        # Store additional kwargs for each function if available.\n",
     "        self.kwargs = {}\n",
     "    \n",
+    "    \n",
     "    # Add a link between each parent and child functions.\n",
     "    # Add keyword arguments if availble.\n",
     "    # Refer to 'Directed_Acyclic_Graph.add()' method attribute.\n",
@@ -205,6 +209,7 @@
     "            return func\n",
     "        return inner_func\n",
     "    \n",
+    "    \n",
     "    # Create 'checkpoint' to save each funtion's output to a file. \n",
     "    # This avoid having to rerun the entire pipeline if error occurs in between.\n",
     "    def checkpoint(self, file_name, data=None):\n",
@@ -218,7 +223,7 @@
     "            with open('checkpoints/{}.json'.format(file_name), \"w\") as writer:\n",
     "                json.dump(data, writer)\n",
     "        else: \n",
-    "            # If the data is not a list of list, then conver it. \n",
+    "            # If the data is not a list of list, then convert it. \n",
     "            if not isinstance(data, list) or isinstance(data, tuple):\n",
     "                data = [[data]]\n",
     "            elif not isinstance(data[0], list) or isinstance(data[0], tuple):\n",
@@ -227,6 +232,7 @@
     "            with open('checkpoints/{}.csv'.format(file_name), \"w\") as write_file:\n",
     "                writer = csv.writer(write_file, delimiter=',')\n",
     "                writer.writerows(data)\n",
+    "    \n",
     "    \n",
     "    # Run each function in order. \n",
     "    # Refer to 'Directed_Acyclic_Graph.sort()' method. \n",
@@ -3870,6 +3876,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
